0032171: Data Exchange - RWGltf_TriangulationReader doesn't copy cached bounding box

Save cached bounding box in loaded triangulation getting it from "proxy" late-loaded object.